--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="container">
+        <h1> Counter </h1>
+        <p id="counter"></p>
+        <button id="dcrease" >decrease</button>
+        <button id="reset" >reset</button>
+        <button id="increase" >increase</button>
+      </div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
