--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="app">
       <div class="container">
-        <h1> Counter </h1>
-        <p id="counter"></p>
+        <h1 id='h1'> Counter </h1>
+        <p id="counter">0</p>
         <button id="dcrease" >decrease</button>
         <button id="reset" >reset</button>
         <button id="increase" >increase</button>
